Change projects on display in project slideshow Project slideshow buttons not complete Projects section images have fixed unresponsive sizes Home section bug when on smallest screens Project section semi responsive

--- a/css/contact.css
+++ b/css/contact.css
@@ -67,6 +67,7 @@
 .contactConclusion{
     font-family: Lobster, cursive;
     margin: 2.5rem 0 0;
+    text-align: center;
 }
 
 /* Form area styling */
